--- a/@css/style.css
+++ b/@css/style.css
@@ -921,10 +921,11 @@ h2 {
 }
 
 .share-panel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    flex-wrap       : wrap;
+    margin-top      : 8px;
 }
 
 .share-box {
@@ -946,8 +947,9 @@ h2 {
 }
 
 .share-text {
-    font-size: 12px;
-    font-weight: bold;
+    margin-top      : 14px;
+    font-size       : 12px;
+    font-weight     : bold;
 }
 
 
@@ -957,7 +959,7 @@ h2 {
     right           : 80px;
     background      : #fd5901;
     border          : none;
-    border-radius   : 40%;
+    border-radius   : 60%;
     cursor          : pointer;
     box-shadow      : 0px 2px 4px rgba(0, 0, 0, 0.2);
     transition      : opacity 0.3s, visibility 0.3s, transform 0.3s;
@@ -981,7 +983,7 @@ h2 {
     right: 15px;
     background-color: #005f60;
     border: none;
-    border-radius: 40%;
+    border-radius: 60%;
     cursor: pointer;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     transition: opacity 0.3s, visibility 0.3s, transform 0.3s;
