link the questionear to the what is for you page

--- a/@css/are-you-ready.css
+++ b/@css/are-you-ready.css
@@ -3,9 +3,7 @@
 }
 
 .dog-breed-selector {
-    background: var(--header-border-color);
-    /* height: 470px;
-    overflow: hidden; */
+    background: var(--background-color-dark-orange);
     min-height: 490px;
     display: flex;
     flex-wrap: wrap;
@@ -17,6 +15,7 @@
     align-items: center;
     max-width: 1244px;
     margin: 0 auto;
+    flex-direction: row-reverse;
 }
 
 .landing-im, .step-inner .image img {
@@ -49,13 +48,13 @@
     border: 0px;
     margin-top: 20px;
     background-color: var(--text-color-footer);
-    color: #0e3f40;
+    color: var(--background-color-brown);
     transition: .2s;
     cursor: pointer;
 }
 
 .landing-text button:hover {
-    background-color: #0e3f40;
+    background-color: var(--background-color-brown);
     color: white;
     transition: .2s;
 }
@@ -74,7 +73,7 @@
     border-radius: 5px;
     margin: 0 auto;
     height: 10px;
-    background: var(--text-color-blue);
+    background: var(--background-color-brown);
     position: relative;
     padding: 0;
     margin: 0;
@@ -97,7 +96,7 @@
     height: 25px;
     border-radius: 50%;
     top: -7px;
-    background: var(--text-color-blue);
+    background: var(--background-color-brown);
     z-index: 1;
     opacity: 0;
 }
@@ -128,11 +127,16 @@
     font-weight: 500;
 }
 
+
+
+
 @keyframes translateXUptoDown{
     0% {transform: translateX(0px), opacity(0);}
     50% {transform: translateX(20px), opacity(0.5);}
     100% {transform: translateX(0px), opacity(1);}
 }
+
+
 
 .steps-container {
     display: none;
@@ -223,8 +227,8 @@
     height: 10px;
     background: transparent;
     text-indent: -9999px;
-    border-top: 3.5px solid var(--header-border-color);
-    border-left: 3.5px solid var(--header-border-color);
+    border-top: 3.5px solid var(--background-color-dark-orange);
+    border-left: 3.5px solid var(--background-color-dark-orange);
     transform: rotate(135deg);
 }
 
@@ -287,6 +291,16 @@
 .steps-container .step .step-inner .navigation .nav-item.next, .answer-navigation {
     text-align: right;
 }
+
+
+
+
+
+
+
+
+
+
 
 .steps-container .step .step-inner .text .filters label.checkbox-container p {
     margin: 0;
@@ -357,7 +371,7 @@
     top: 2px;
     width: 9px;
     height: 15px;
-    border: solid var(--header-border-color);
+    border: solid var(--background-color-dark-orange);
     border-width: 0 4px 4px 0;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
@@ -367,6 +381,9 @@
 .steps-container .step .step-inner .text .filters label.checkbox-container input:checked ~ .checkmark:after {
     display: block;
 }
+
+
+
 
 .qualities-order {
     display: flex;
@@ -442,6 +459,21 @@
     cursor: pointer;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #your-result {
     display: none;
     max-width: 1244px;
@@ -502,6 +534,15 @@
     padding: 10px;
     background: var(--background-color-header-mobile);
 }
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 900px) {
 
@@ -590,8 +631,8 @@
         margin-top: -22px;
         margin-left: 147px;
         text-indent: -9999px;
-        border-top: 3.5px solid var(--header-border-color);
-        border-left: 3.5px solid var(--header-border-color);
+        border-top: 3.5px solid var(--background-color-dark-orange);
+        border-left: 3.5px solid var(--background-color-dark-orange);
     }
 
     .step .step-inner .navigation .nav-item a, .steps-container .step .step-inner .navigation .nav-item, .answer-navigation .nav-item {
@@ -643,3 +684,7 @@
         margin: 10px;
     }
 }
+
+
+
+
