Mutsuna, pet Years tests fixed

--- a/@css/calculator-dog.css
+++ b/@css/calculator-dog.css
@@ -86,7 +86,7 @@
     height: 240px;
     margin-top: 17px;
     overflow: hidden;
-    background-image: url(../img/growth/dog-calculator.png);
+    background-image: url(../@img/growth/dog-calculator.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
