--- a/@css/calculator.css
+++ b/@css/calculator.css
@@ -72,7 +72,7 @@ input {
   height: 240px;
   margin-top: 17px;
   overflow: hidden;
-  background-image: url(../img/growth/cat-calculator.png);
+  background-image: url(../@img/growth/cat-calculator.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
